[tool.poetry]
name = "mando-marketplace"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "mando_marketplace"}]

[tool.poetry.dependencies]
python = "^3.10"
databases = "0.9.0"
fastapi = "^0.112.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
