[tool.poetry]
name = "mando-marketplace"
version = "0.1.0"
description = ""
authors = ["Manoj Bajaj <manoj.bajaj@mando.work>"]
readme = "README.md"
packages = [{ include = "mando_marketplace" }]

[tool.poetry.dependencies]
python = "^3.10"
databases = { extras = ["sqlite"], version = "^0.9.0" }
fastapi = "^0.112.0"
uvicorn = { extras = ["standard"], version = "^0.30.4" }
sqlmodel = "^0.0.21"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
